--- a/src/pages/Home/style.module.css
+++ b/src/pages/Home/style.module.css
@@ -2,6 +2,10 @@
   background-color: pink !important;
 } */
 
+.container__loading {
+  margin-top: 50%;
+}
+
 .container__form {
   margin-top: 10px;
   padding: 10px;
